dont display workitems on mobile in top nav also fix carousel medaiqueries

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -15,10 +15,7 @@
 
     /* For tablets & smart phones */
     @media (max-width: 767px) {
-      body {
-        padding-left: 10px;
-        padding-right: 10px;
-      }
+   
       #carousel-sec {
         width: auto
       }
