--- a/less/mediaqueries.less
+++ b/less/mediaqueries.less
@@ -31,6 +31,10 @@ and (max-width : 768px){
   // *display:inline; /*IE7*/
   // *zoom:1; /*IE7*/
   }
+
+  ul#work-items{
+    display:none;
+  }
 ul.sf-menu{
 
     height:auto;
@@ -70,6 +74,11 @@ ul#desktop-navbar{
     margin-left: 0px;
     margin-right: 0px;
   }
+}
+
+.thetopnav{
+  margin-left: 0px;
+  padding-left: 0px;
 }
 /**
  * reduce the title size for small screens
